--- a/html/index.html
+++ b/html/index.html
@@ -104,7 +104,7 @@
     <div class="half2">
         <h2>Depoimentos</h2>
         <div class="depoimento-single">
-            <p>“O Rafael foi muito atencioso, me buscou no aeroporto
+            <p>“O Lucas foi muito atencioso, me buscou no aeroporto
                 e garantiu toda comodidade e conforto no almoço, no transfer, na visita ao veículo e durante o test-drive”</p>
             <div class="navigation">
                 <div class="arrows">
