--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link href="/css/style.css" rel="stylesheet" type="text/css">
+    <link href="./css/style.css" rel="stylesheet" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
@@ -16,8 +16,8 @@
         <nav class="desktop-menu">
             <ul>
                 <li><a style="color:#EB2D2D;" href="#">Home</a></li>
-                <li><a href="venda.html">Venda</a></li>
-                <li><a href="sobre.html">Sobre</a></li>
+                <li><a href="./pages/venda.html">Venda</a></li>
+                <li><a href="./pages/sobre.html">Sobre</a></li>
                 <li><a goto="contato" href="#">Contato</a></li>
             </ul>
         </nav><!--desktop-menu-->
@@ -55,7 +55,7 @@
     <div class="container">
 
         <div class="vitrine-destaque">
-            <div style="background-image: url(/images/carro1.jpg);" class="carro-img"></div><!--carro-img-->
+            <div style="background-image: url(./images/carro1.jpg);" class="carro-img"></div><!--carro-img-->
             <div class="info-carro">
                 <h2>Volkswagen Karmann-ghia</h2>
                 <p>1.6 8v, Gasolina, 2P, Manual1969</p>
@@ -64,7 +64,7 @@
         </div><!--vitrine-destaque-->
 
         <div class="vitrine-destaque">
-            <div style="background-image: url(/images/carro2.jpg);" class="carro-img"></div><!--carro-img-->
+            <div style="background-image: url(./images/carro2.jpg);" class="carro-img"></div><!--carro-img-->
             <div class="info-carro">
                 <h2>Volkswagen Karmann-ghia</h2>
                 <p>1.6 8v, Gasolina, 2P, Manual1969</p>
@@ -73,7 +73,7 @@
         </div><!--vitrine-destaque-->
 
         <div class="vitrine-destaque">
-            <div style="background-image: url(/images/carro3.jpg);" class="carro-img"></div><!--carro-img-->
+            <div style="background-image: url(./images/carro3.jpg);" class="carro-img"></div><!--carro-img-->
             <div class="info-carro">
                 <h2>Volkswagen Karmann-ghia</h2>
                 <p>1.6 8v, Gasolina, 2P, Manual1969</p>
@@ -108,8 +108,8 @@
                 e garantiu toda comodidade e conforto no almoço, no transfer, na visita ao veículo e durante o test-drive”</p>
             <div class="navigation">
                 <div class="arrows">
-                    <img src="/images/arrow-left.png" />
-					<img src="/images/arrow-right.png"/>
+                    <img src="./images/arrow-left.png" />
+					<img src="./images/arrow-right.png"/>
                 </div><!--arrows-->
                 <div class="nome-depoimento">João da silva</div><!--nome-depoimento-->
             </div><!--navigation-->
@@ -167,8 +167,8 @@
     </div><!--container-->
 </footer><!--footer-->
 
-<script src="/js/jquery.js"></script>
-<script src="/js/scrollpage.js"></script>
+<script src="./js/jquery.js"></script>
+<script src="./js/scrollpage.js"></script>
 
 </body>
 </html>
