--- a/pages/venda.html
+++ b/pages/venda.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link href="/css/style.css" rel="stylesheet" type="text/css">
+    <link href="../css/style.css" rel="stylesheet" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
@@ -180,7 +180,7 @@
     </div><!--container-->
 </footer><!--footer-->
 
-<script src="/js/jquery.js"></script>
-<script src="/js/filtropreco.js"></script>
+<script src="../js/jquery.js"></script>
+<script src="../js/filtropreco.js"></script>
 </body>
 </html>
