--- a/pages/veiculo-teste.html
+++ b/pages/veiculo-teste.html
@@ -46,19 +46,19 @@
     <div class="container">
         <div class="info-veiculo">
             <div class="info-bread"><a href="index.html">HOME</a><span>></span>
-            <a href="/html/venda.html">VENDA</a><span>></span>
-            <a href="/html/veiculo-teste.html">VEÍCULO DE TEST</a></div><!--info-bread-->
+            <a href="../html/venda.html">VENDA</a><span>></span>
+            <a href="../html/veiculo-teste.html">VEÍCULO DE TEST</a></div><!--info-bread-->
         <div class="foto-destaque"></div><!--foto-destaque-->
         <div class="nav-galeria-parent">
             <div class="arrow-left-nav"></div><!--arrow-left-nav-->
             <div class="arrow-right-nav"></div><!--arrow-right-nav-->
             <div class="nav-galeria">
                 <div class="nav-galeria-wraper">
-                    <div class="mini-img-wraper"><div style="background-image:url(/images/carro1.jpg);" class="mini-img"></div></div>
-                    <div class="mini-img-wraper"><div style="background-image:url(/images/carro3.jpg);" class="mini-img"></div></div>
-                    <div class="mini-img-wraper"><div style="background-image:url(/images/carro2.jpg);" class="mini-img"></div></div>
-                    <div class="mini-img-wraper"><div style="background-image:url(/images/carro1.jpg);" class="mini-img"></div></div>
-                    <div class="mini-img-wraper"><div style="background-image:url(/images/carro3.jpg);" class="mini-img"></div></div>
+                    <div class="mini-img-wraper"><div style="background-image:url(../images/carro1.jpg);" class="mini-img"></div></div>
+                    <div class="mini-img-wraper"><div style="background-image:url(../images/carro3.jpg);" class="mini-img"></div></div>
+                    <div class="mini-img-wraper"><div style="background-image:url(../images/carro2.jpg);" class="mini-img"></div></div>
+                    <div class="mini-img-wraper"><div style="background-image:url(../images/carro1.jpg);" class="mini-img"></div></div>
+                    <div class="mini-img-wraper"><div style="background-image:url(../images/carro3.jpg);" class="mini-img"></div></div>
                 </div><!--nav-galeria-wraper-->
             </div><!--nav-galeria-->
         </div><!--nav-galeria-parent-->
@@ -119,7 +119,7 @@
     <div class="container">
 
         <div class="vitrine-destaque">
-            <div style="background-image: url(/images/carro3.jpg);" class="carro-img"></div><!--carro-img-->
+            <div style="background-image: url(../images/carro3.jpg);" class="carro-img"></div><!--carro-img-->
             <div class="info-carro">
                 <h2>Volkswagen Karmann-ghia</h2>
                 <p>1.6 8v, Gasolina, 2P, Manual1969</p>
@@ -128,7 +128,7 @@
         </div><!--vitrine-destaque-->
 
         <div class="vitrine-destaque">
-            <div style="background-image: url(/images/carro2.jpg)" class="carro-img"></div><!--carro-img-->
+            <div style="background-image: url(../images/carro2.jpg)" class="carro-img"></div><!--carro-img-->
             <div class="info-carro">
                 <h2>Volkswagen Karmann-ghia</h2>
                 <p>1.6 8v, Gasolina, 2P, Manual1969</p>
@@ -137,7 +137,7 @@
         </div><!--vitrine-destaque-->
 
         <div class="vitrine-destaque">
-            <div style="background-image: url(/images/carro1.jpg);" class="carro-img"></div><!--carro-img-->
+            <div style="background-image: url(../images/carro1.jpg);" class="carro-img"></div><!--carro-img-->
             <div class="info-carro">
                 <h2>Volkswagen Karmann-ghia</h2>
                 <p>1.6 8v, Gasolina, 2P, Manual1969</p>
